--- a/style.css
+++ b/style.css
@@ -368,9 +368,9 @@ footer {
   width: 100%;
   background: none;
   border: none;
-  padding: 15px 20px;
+  padding: 1px 2px;
   text-align: left;
-  font-size: 1em;
+  font-size: 15px;
   color: #ffffff;
   cursor: pointer;
   outline: none;
